--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -13,12 +13,13 @@ html {
 body {
     text-align: center;
     margin: 0;
-    font-family: FontAwesome;
+    font-family: 'Poppins', sans-serif;
     color:rgb(42, 43, 43);
 }
 
 .header {
     position: relative;
+    /* background-color:  #E6EBE0; */
     width: 480px;
     height: 150px;
     right: 2.5%;
@@ -64,7 +65,6 @@ body {
 .todo-style {
     border: none;
     background-color: rgb(245, 237, 237);  
-    font-family: FontAwesome; 
     font-weight: bold;
 }
 
@@ -81,7 +81,7 @@ body {
     padding: 5%;
     left: 13%;
     margin: 0 auto;   
-    background-color:  #218380;
+    background-color: #5D576B;
     border-radius: 5px;  
     border-radius: 15px;
     align-items: center;
@@ -116,16 +116,16 @@ i {
 }
 
 .priority {
-    background-color: rgb(231, 79, 79);
+    background-color: #5D576B;
     font-weight: bold;
 }
 
 .medium {
-    background-color: rgb(236, 143, 71);
+    background-color: #FFA630;
 }
 
 .low {
-    background-color: rgb(137, 224, 137);
+    background-color: #519872;
 }
 
 .custom-checkbox {
@@ -147,7 +147,6 @@ i {
 .date-picker {
     width: 120px;
     border: none;
-    font-family: FontAwesome; 
     font-size: smaller;
     color: rgb(42, 43, 43);
     float: right;
@@ -184,7 +183,6 @@ i {
     text-align: center;
     border: none;
     border-radius: 50%;
-    font-family: FontAwesome; 
     font-weight: bold;
 }
 
