--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -14,12 +14,13 @@ body {
     text-align: center;
     margin: 0;
     font-family: 'Poppins', sans-serif;
-    color:rgb(42, 43, 43);
+    color: #343a40;
 }
 
 .header {
     position: relative;
-    /* background-color:  #E6EBE0; */
+    background-color: #5D576B;
+    color: #f8f9fa;
     width: 480px;
     height: 150px;
     right: 2.5%;
@@ -63,13 +64,20 @@ body {
 }
 
 .todo-style {
+    color: #343a40;
     border: none;
-    background-color: rgb(245, 237, 237);  
-    font-weight: bold;
+    padding: 2px;
+    padding-left: 2px;
+    width: 90px;  
+    font-weight: bolder;
+    border-top-right-radius: 19px; 
+    border-top-left-radius: 19px; 
+    border-bottom-right-radius: 19px; 
+    border-bottom-left-radius: 19px; 
 }
 
 .todo-style:hover {
-    background-color: #c5c3c4;
+    /* background-color: #c5c3c4; */
     box-shadow: h-offset v-offset blur color;
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
 }
@@ -80,14 +88,9 @@ body {
     width: 75%;
     padding: 5%;
     left: 13%;
-    margin: 0 auto;   
-    background-color: #5D576B;
-    border-radius: 5px;  
-    border-radius: 15px;
+    margin: 0 auto;     
     align-items: center;
     vertical-align: middle;
-    box-shadow: h-offset v-offset blur color;
-    /* box-shadow: 0 0 3px #833958; */
 }
 
 ul {
@@ -102,30 +105,8 @@ li {
 }
 
 i {
-       color: rgb(42, 43, 43);
+       color: #343a40;
        font: bold;     
-}
-
-.complete {
-    text-decoration: line-through;
-}
-
-.warning {
-    border: red;
-    border-width: 10px;
-}
-
-.priority {
-    background-color: #5D576B;
-    font-weight: bold;
-}
-
-.medium {
-    background-color: #FFA630;
-}
-
-.low {
-    background-color: #519872;
 }
 
 .custom-checkbox {
@@ -133,15 +114,14 @@ i {
 }
 
 .input-style {
-    width: 180px;
-}
-
-.hide {
-    display: none;
-}
-
-.pointer {
-    cursor: pointer;
+    width: 190px;
+    background-color: #F1F7ED;
+    box-shadow: h-offset v-offset blur color;
+    box-shadow: 0 0 4px #D7DFCD;
+    border-top-right-radius: 18px; 
+    border-top-left-radius: 18px; 
+    border-bottom-right-radius: 18px; 
+    border-bottom-left-radius: 18px; 
 }
 
 .date-picker {
@@ -153,20 +133,20 @@ i {
 }
 
 .button-plus {
-    background-color: #FBB13C; 
+    background-color: #5D576B; 
     border-radius: 50%;
     border: none;
     box-shadow: h-offset v-offset blur color;
-    box-shadow: 0 0 3px #FBB13C; 
+    box-shadow: 0 0 3px #5D576B; 
     text-align: center;
     width: 40px;
     height: 40px;
 }
 
 .button-plus:hover {
-    background-color: #218380;  
+    background-color: #FFA630;  
     box-shadow: h-offset v-offset blur color;
-    box-shadow: 0 0 2px #218380; 
+    box-shadow: 0 0 2px #FFA630; 
 }
 
 .white-plus {
@@ -174,22 +154,15 @@ i {
 }
 
 .white-plus:hover {
-    color: rgb(42, 43, 43);
+    color: #343a40;
 }
 
 .button-style-list {
-    /* background-color: rgb(245, 237, 237); */
-    color: rgb(42, 43, 43);
     text-align: center;
+    background-color: white;
     border: none;
     border-radius: 50%;
     font-weight: bold;
-}
-
-.button-style-list:hover {
-    background-color: #218380;
-    box-shadow: h-offset v-offset blur color;
-    box-shadow: 0 0 2px #218380; 
 }
 
 .delete-button {
@@ -197,14 +170,13 @@ i {
 }
 
 .button-sort-clear {
-    background-color: #FBB13C;
-    color: rgb(42, 43, 43);
+    background-color: #FFA630;
     border: none;
     text-align: center;
     vertical-align: middle;
     border-radius: 50%;
     box-shadow: h-offset v-offset blur color;
-    box-shadow: 0 0 3px #FBB13C;
+    box-shadow: 0 0 3px #FFA630;
     width: 40px;
     height: 40px;
 }
@@ -217,6 +189,48 @@ i {
 
 button:hover {
     transform: scale(1.3);
+}
+
+.complete {
+    text-decoration: line-through;
+    color: #6c757d!important;
+    background-color: white!important;
+}
+
+.warning {
+    border: #FF3562;
+    border-width: 10px;
+}
+
+.priority {
+    background-color: #FF3562;
+    color: #f8f9fa;
+    border-top-right-radius: 10px; 
+    border-top-left-radius: 10px; 
+    border-bottom-right-radius: 10px; 
+    border-bottom-left-radius: 10px; 
+    /* font-weight: bold; */
+}
+
+.medium {
+    background-color: #FFA630;
+    border-top-right-radius: 10px; 
+    border-top-left-radius: 10px; 
+    border-bottom-right-radius: 10px; 
+    border-bottom-left-radius: 10px; 
+}
+
+.low {
+    background-color: #519872;
+    color: #f8f9fa;
+    border-top-right-radius: 10px; 
+    border-top-left-radius: 10px; 
+    border-bottom-right-radius: 10px; 
+    border-bottom-left-radius: 10px; 
+}
+
+.pointer {
+    cursor: pointer;
 }
 
 
