--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -23,14 +23,13 @@ body {
     color: #f8f9fa;
     width: 480px;
     height: 150px;
-    right: 2.5%;
-    padding: 3%;
+    padding: 20px;
     margin: 0 auto;
     margin-top: 10px;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px; 
-    /* box-shadow: h-offset v-offset blur color;
-    box-shadow: 0 0 2px #218380;    */
+    box-shadow: h-offset v-offset blur color;
+    box-shadow: 0 0 2px #5D576B;    
 }
 
 .remaining-tasks {
@@ -54,7 +53,7 @@ body {
     text-align: center;   
     border: none;   
     box-shadow: h-offset v-offset blur color;
-    box-shadow: 0 0 2px rgb(245, 237, 237); 
+    box-shadow: 0 0 4px rgb(245, 237, 237); 
 }
 
 .todo-list {
@@ -68,26 +67,24 @@ body {
     border: none;
     padding: 2px;
     padding-left: 2px;
-    width: 90px;  
+    width: 100px; 
     font-weight: bolder;
     border-top-right-radius: 19px; 
     border-top-left-radius: 19px; 
     border-bottom-right-radius: 19px; 
-    border-bottom-left-radius: 19px; 
+    border-bottom-left-radius: 19px;  
 }
 
 .todo-style:hover {
-    /* background-color: #c5c3c4; */
     box-shadow: h-offset v-offset blur color;
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
 }
 
 .add-to-do {
     position: absolute;
-    top: 80%;
-    width: 75%;
+    top: 85%;
     padding: 5%;
-    left: 13%;
+    left: 10%; 
     margin: 0 auto;     
     align-items: center;
     vertical-align: middle;
@@ -122,7 +119,7 @@ i {
     border-top-left-radius: 18px; 
     border-bottom-right-radius: 18px; 
     border-bottom-left-radius: 18px; 
-}
+} 
 
 .date-picker {
     width: 120px;
@@ -133,7 +130,8 @@ i {
 }
 
 .date-display {
-    font-size: smaller;
+    font-size: small;
+    display: inline;
 }
 
 .category-button {
@@ -147,7 +145,7 @@ i {
     border-radius: 50%;
     border: none;
     box-shadow: h-offset v-offset blur color;
-    box-shadow: 0 0 3px #5D576B; 
+    box-shadow: 0 0 2px #5D576B; 
     text-align: center;
     width: 40px;
     height: 40px;
@@ -157,6 +155,7 @@ i {
     background-color: #FFA630;  
     box-shadow: h-offset v-offset blur color;
     box-shadow: 0 0 2px #FFA630; 
+    transform: scale(1.3);
 }
 
 .white-plus {
@@ -168,13 +167,16 @@ i {
 }
 
 .button-style-list {
-    text-align: center;
+    text-align: right;
     background-color: white;
     border: none;
     border-radius: 50%;
     font-weight: bold;
 }
 
+.button-style-list:hover {
+    transform: scale(1.3);
+}
 .delete-button {
     display: inline-block;
 }
@@ -186,18 +188,12 @@ i {
     vertical-align: middle;
     border-radius: 50%;
     box-shadow: h-offset v-offset blur color;
-    box-shadow: 0 0 3px #FFA630;
+    box-shadow: 0 0 2px #FFA630;
     width: 40px;
     height: 40px;
 }
 
 .button-sort-clear:hover {
-    background-color: #8F2D56;
-    box-shadow: h-offset v-offset blur color;
-    box-shadow: 0 0 2px #8F2D56;
-}
-
-button:hover {
     transform: scale(1.3);
 }
 
@@ -214,7 +210,6 @@ button:hover {
     border-top-left-radius: 10px; 
     border-bottom-right-radius: 10px; 
     border-bottom-left-radius: 10px; 
-    /* font-weight: bold; */
 }
 
 .medium {
@@ -223,6 +218,7 @@ button:hover {
     border-top-left-radius: 10px; 
     border-bottom-right-radius: 10px; 
     border-bottom-left-radius: 10px; 
+    color: rgb(42, 43, 43);
 }
 
 .low {
@@ -239,21 +235,67 @@ button:hover {
 }
 
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 576px) {
 
     .header {
-        padding: 5%;
-        height: 80px;
-        max-width: 100%;
         width: 100vw;
+        max-width: 100%;     
+        height: 150px;
+        border-top-left-radius: 0px;
+        border-top-right-radius: 0px;
+        margin: auto 0;
     }
-
+        
     .app-area {
         width: 100vw;
         max-width: 100%;
         max-height: 100vw; 
-        margin: auto 0;
+        box-shadow: none;
     }
+        
+    .todo-list {
+        max-width: 100%;
+        padding: 15px;
+        margin: auto 0;
+        display: inline-block;
+    }
+
+    .remaining-tasks {
+        padding: 15px;
+    }
+        
+    .add-to-do {
+        position: fixed;
+        top: 85%;  
+        right: 10%;
+    }
+        
+    .input-style {
+        margin: 10px;
+        width: 170px;
+    }        
+}       
+
+@media screen and (max-width: 400px) {
+
+    .header {
+        padding: 15px;
+        padding-bottom: 10px;
+        height: 150px;
+        max-width: 100%;
+        width: 100vw;
+        min-width: 335px; 
+        font-size: smaller;
+    }
+    
+    .todo-list {
+        padding: 15px;
+        font-size: smaller;
+    }
+
+    .date-display {
+        font-size: x-small;
+    } 
 
     .button-sort-clear {
         width: 30px;
@@ -262,74 +304,46 @@ button:hover {
         text-align: center;
     }
 
-    
-.button-plus {
-     width: 37px;
-     height: 37px;
-    }
-
-    i {
-        width: 15px;
-        height: 15px;
-    }
-
     .input-style {
-        width: 150px;
+        width: 140px;
         margin: 10px;
     }
-} 
 
-@media screen and (max-width: 576px) {
-
+ @media screen and (max-width: 290px) { 
     .header {
-        padding: 5%;
-        width: 100vw;
-        max-width: 100%;     
-        height: 135px;
-        border-top-left-radius: 0px;
-        border-top-right-radius: 0px;
-        margin: auto 0;
-    }
-
-    .app-area {
+        font-size: xx-small;
         width: 100vw;
         max-width: 100%;
-        max-height: 100vw; 
-        margin: auto 0;
+        min-width: 280px; 
     }
-
     .todo-list {
-        max-width: 100%;
-        margin: auto 0;
-        display: inline-block;
-    }
-
-    .add-to-do {
-        width: 100vw;
-        max-width: 100%;
-        margin: 0 auto;        
-        left: 0%;
-        top: 80%;
-        border-top-left-radius: 0px;
-        border-bottom-left-radius: 0px;
-        border-top-right-radius: 0px; 
-        border-bottom-right-radius: 0px;   
+        font-size: x-small;
+        padding: 8px;
     }
 
     .input-style {
-        margin: 10px;
-    }
-}
-
-@media screen and (max-width: 1024px) {
-
-    .header {
-        max-width: 610px;
+        display: inline;
+        width: 130px;
+        margin: 0px;
+        float: right;
     }
 
-    .app-area {
-            max-width: 610px;
-            height: 620px;
-        }    
-}    
+    .date-display {
+        font-size: xx-small;
+    }
+
+    .button-plus {
+        display: inline;
+        width: 30px;
+        height: 30px;
+    }
+
+ }
+       
+}  
+
+
+
+  
+ 
     
